src/test/ui/feature-gates/feature-gate-omit-gdb-pretty-printer-section.stderr
error[E0658]: the `#[omit_gdb_pretty_printer_section]` attribute is just used for the Rust test suite
  --> $DIR/feature-gate-omit-gdb-pretty-printer-section.rs:1:1
   |
LL | #[omit_gdb_pretty_printer_section]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(omit_gdb_pretty_printer_section)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
